TestCases/LLVMTests/SyntaxErrorTests/tests/test48.c
#include <stdio.h>


int main() {
char c = '\n';


float f = 33.1;
float final_line = 33.99895;

printf("%f", final_line);
printf("%f", f);
printf("%c", c);

    return 0;

}/*this shouldn't give problems*/